--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "react-javascript-starter",
-  "name": "thirdweb starter project with React & JavaScript",
+  "name": "weiweb3 starter project with React & JavaScript",
   "icons": [
     {
       "src": "favicon.ico",
